--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.10.3",
+    "install": "^0.13.0",
+    "npm": "^11.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router": "^6.30.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
