--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
-    "@mui/x-data-grid": "^8.2.0",
+    "@mui/x-data-grid": "^8.7.0",
     "@tanstack/react-query": "^5.75.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,9 +19,12 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "classnames": "^2.5.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "framer-motion": "^12.10.3",
     "install": "^0.13.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "npm": "^11.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
@@ -33,6 +36,7 @@
     "sass": "^1.70.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "scripts": {
@@ -60,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
