--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "install": "^0.13.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "moment": "^2.30.1",
     "npm": "^11.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
