--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-charts": "^8.8.0",
     "@mui/x-data-grid": "^8.7.0",
     "@tanstack/react-query": "^5.75.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.5.0",
     "classnames": "^2.5.1",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
@@ -29,6 +31,7 @@
     "npm": "^11.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-router": "^6.30.0",
