--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
@@ -70,6 +71,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/react-color": "^3.0.13",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
